refactor: reorganize project structure and move assets to src/renderer
Moved all assets, CSS, JS, and HTML files to the `src/renderer` directory to improve project organization and maintainability. Updated file paths and references accordingly. This change aligns with the new project structure and prepares for future enhancements.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "visual-web-maker",
   "version": "0.1.1",
   "description": "Editor visual de HTML com interface de arrastar e soltar",
-  "main": "main.js",
+  "main": "src/main/main.js",
   "scripts": {
     "start": "electron .",
     "dev": "electron . --dev",
@@ -35,7 +35,11 @@
       "output": "dist"
     },
     "files": [
-      "**/*",
+      "src/**/*",
+      "assets/**/*",
+      "package.json",
+      "LICENSE",
+      "README.md",
       "!dist/**/*",
       "!build/**/*",
       "!node_modules/**/*"
