feat(ui): update app styling and add settings panel
- Replace Inter font with Noto Sans (temporary)
- Redesign sidebar with new dimensions and styling
- Add comprehensive settings panel for style controls
- Update logo and icon assets
- Improve layout spacing and border radius consistency

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     ],
     "win": {
       "target": ["nsis"],
-      "icon": "assets/icons/icon.ico"
+      "icon": "src/renderer/images/system/win.ico"
     },
     "mac": {
       "target": ["dmg"],
